--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "63564c15",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "cc27a196",
    "metadata": {},
    "outputs": [],
@@ -30,28 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "55df6a94",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[len(T) for T in tr_elements[:12]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "62bf611c",
    "metadata": {},
    "outputs": [
@@ -67,10 +46,9 @@
    ],
    "source": [
     "tr_elements = doc.xpath('//tr')\n",
-    "#Create empty list\n",
+    " \n",
     "col=[]\n",
     "i=0\n",
-    "#For each row, store each first element (header) and an empty list\n",
     "for t in tr_elements[0]:\n",
     "    i+=1\n",
     "    name=str(t.text_content()).strip('\\n').replace('\\n','').replace(' ','')\n",
@@ -80,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f8c49dea",
    "metadata": {},
    "outputs": [
@@ -90,7 +68,7 @@
        "1867"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "4096a346",
    "metadata": {},
    "outputs": [],
@@ -122,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6d3f81d2",
    "metadata": {},
    "outputs": [],
@@ -160,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "cd4cd86b",
    "metadata": {},
    "outputs": [],
@@ -176,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "a0900c4d",
    "metadata": {},
    "outputs": [
@@ -186,7 +164,7 @@
        "134"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "8f1e0f01",
    "metadata": {},
    "outputs": [
@@ -211,7 +189,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,33 +201,170 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7324dec",
+   "id": "46c843d5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "ec88e0ba",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depressionmental^UMLS:C0011581_depressive disorder\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Disease</th>\n",
+       "      <th>Occurrence</th>\n",
+       "      <th>Symptoms</th>\n",
+       "      <th>Symptoms No</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hypertensivedisease</td>\n",
+       "      <td>3363</td>\n",
+       "      <td>painchest,shortnessof breath,dizziness,astheni...</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>diabetes</td>\n",
+       "      <td>1421</td>\n",
+       "      <td>polyuria,polydypsia,shortnessof breath,painche...</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>depressionmental^UMLS:C0011581_depressive diso...</td>\n",
+       "      <td>1337</td>\n",
+       "      <td>feelingsuicidal,suicidal,hallucinationsauditor...</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>coronaryarteriosclerosis^UMLS:C0010068_coronar...</td>\n",
+       "      <td>1284</td>\n",
+       "      <td>painchest,anginapectoris,shortnessof breath,hy...</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>pneumonia</td>\n",
+       "      <td>1029</td>\n",
+       "      <td>cough,fever,decreasedtranslucency,shortnessof ...</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>ileus</td>\n",
+       "      <td>56</td>\n",
+       "      <td>abscess bacterial,abdomen acute,air fluid leve...</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>adhesion</td>\n",
+       "      <td>57</td>\n",
+       "      <td>flatulence,pain,large-for-dates fetus,para 1,v...</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>delusion</td>\n",
+       "      <td>56</td>\n",
+       "      <td>loose associations,giddy mood,feeling hopeless...</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>affectlabile</td>\n",
+       "      <td>45</td>\n",
+       "      <td>extreme exhaustion,sleeplessness,enuresis,pati...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>decubitusulcer</td>\n",
+       "      <td>42</td>\n",
+       "      <td>systolic murmur,frail,fever</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>134 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Disease  Occurrence  \\\n",
+       "0                                  hypertensivedisease        3363   \n",
+       "1                                             diabetes        1421   \n",
+       "2    depressionmental^UMLS:C0011581_depressive diso...        1337   \n",
+       "3    coronaryarteriosclerosis^UMLS:C0010068_coronar...        1284   \n",
+       "4                                            pneumonia        1029   \n",
+       "..                                                 ...         ...   \n",
+       "129                                              ileus          56   \n",
+       "130                                           adhesion          57   \n",
+       "131                                           delusion          56   \n",
+       "132                                       affectlabile          45   \n",
+       "133                                     decubitusulcer          42   \n",
+       "\n",
+       "                                              Symptoms  Symptoms No  \n",
+       "0    painchest,shortnessof breath,dizziness,astheni...           12  \n",
+       "1    polyuria,polydypsia,shortnessof breath,painche...           14  \n",
+       "2    feelingsuicidal,suicidal,hallucinationsauditor...           21  \n",
+       "3    painchest,anginapectoris,shortnessof breath,hy...            9  \n",
+       "4    cough,fever,decreasedtranslucency,shortnessof ...           19  \n",
+       "..                                                 ...          ...  \n",
+       "129  abscess bacterial,abdomen acute,air fluid leve...           15  \n",
+       "130  flatulence,pain,large-for-dates fetus,para 1,v...           13  \n",
+       "131  loose associations,giddy mood,feeling hopeless...           21  \n",
+       "132  extreme exhaustion,sleeplessness,enuresis,pati...            8  \n",
+       "133                        systolic murmur,frail,fever            3  \n",
+       "\n",
+       "[134 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df.iloc[2]['Disease'])\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "a8761827",
+   "execution_count": 11,
+   "id": "8e13a8f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,8 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "43626a8d",
+   "execution_count": 12,
+   "id": "fe7ff087",
    "metadata": {},
    "outputs": [
     {
@@ -296,8 +411,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "04bb62f0",
+   "execution_count": 13,
+   "id": "60a7dda2",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "3331469f",
    "metadata": {},
    "outputs": [
@@ -351,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "46f25d60",
    "metadata": {},
    "outputs": [
@@ -369,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 16,
    "id": "3d5b3fc1",
    "metadata": {},
    "outputs": [],
