--- a/main.ipynb
+++ b/main.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "ec88e0ba",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "[134 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Number of Symptopns stated - 443\n"
+      "Total Number of Symptoms stated - 443\n"
      ]
     }
    ],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "46f25d60",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Number of Unique Symptopns stated - 1866\n"
+      "Total Number of Unique Symptoms stated - 1866\n"
      ]
     }
    ],
@@ -494,8 +494,480 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8091d58c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "painchest\n",
+      "shortnessof breath\n",
+      "dizziness\n",
+      "asthenia\n",
+      "fall\n",
+      "syncope\n",
+      "vertigo\n",
+      "sweat^UMLS:C0700590_sweatingincreased\n",
+      "palpitation\n",
+      "nausea\n",
+      "anginapectoris\n",
+      "pressurechest\n",
+      "polyuria\n",
+      "polydypsia\n",
+      "orthopnea\n",
+      "rale\n",
+      "unresponsiveness\n",
+      "mentalstatus changes\n",
+      "vomiting\n",
+      "labored breathing\n",
+      "feelingsuicidal\n",
+      "suicidal\n",
+      "hallucinationsauditory\n",
+      "feelinghopeless\n",
+      "weepiness\n",
+      "sleeplessness\n",
+      "motorretardation\n",
+      "irritablemood\n",
+      "blackout\n",
+      "mooddepressed\n",
+      "hallucinationsvisual\n",
+      "worry\n",
+      "agitation\n",
+      "tremor\n",
+      "intoxication\n",
+      "verbalauditory hallucinations\n",
+      "energyincreased\n",
+      "difficulty\n",
+      "nightmare\n",
+      "unableto concentrate\n",
+      "homelessness\n",
+      "hypokinesia\n",
+      "dyspneaon exertion\n",
+      "chesttightness\n",
+      "cough\n",
+      "fever\n",
+      "decreasedtranslucency\n",
+      "productivecough\n",
+      "pleuriticpain\n",
+      "yellowsputum\n",
+      "breathsounds decreased\n",
+      "chill\n",
+      "rhonchus\n",
+      "greensputum\n",
+      "non-productivecough\n",
+      "wheezing\n",
+      "haemoptysis\n",
+      "distressrespiratory\n",
+      "tachypnea\n",
+      "malaise\n",
+      "nightsweat\n",
+      "jugularvenous distention\n",
+      "dyspnea\n",
+      "dysarthria\n",
+      "speechslurred\n",
+      "facialparesis\n",
+      "hemiplegia\n",
+      "seizure\n",
+      "numbness\n",
+      "symptomaggravating factors\n",
+      "pain chest\n",
+      "st segment elevation\n",
+      "sweat^UMLS:C0700590_sweating increased\n",
+      "shortness of breath\n",
+      "st segment depression\n",
+      "angina pectoris\n",
+      "pressure chest\n",
+      "t wave inverted\n",
+      "chest tightness\n",
+      "presence of q wave\n",
+      "chest discomfort\n",
+      "bradycardia\n",
+      "pain\n",
+      "nonsmoker\n",
+      "erythema\n",
+      "decreased translucency\n",
+      "hepatosplenomegaly\n",
+      "pruritus\n",
+      "diarrhea\n",
+      "abscess bacterial\n",
+      "swelling\n",
+      "apyrexial\n",
+      "dysuria\n",
+      "hematuria\n",
+      "renal angle tenderness\n",
+      "lethargy\n",
+      "hyponatremia\n",
+      "hemodynamically stable\n",
+      "distress respiratory\n",
+      "difficulty passing urine\n",
+      "mental status changes\n",
+      "consciousness clear\n",
+      "guaiac positive\n",
+      "monoclonal\n",
+      "ecchymosis\n",
+      "tumor cell invasion\n",
+      "haemorrhage\n",
+      "pallor\n",
+      "fatigue\n",
+      "heme positive\n",
+      "pain back\n",
+      "orthostasis\n",
+      "arthralgia\n",
+      "transaminitis\n",
+      "sputum purulent\n",
+      "hypoxemia\n",
+      "hypercapnia\n",
+      "patient non compliance\n",
+      "unconscious state\n",
+      "bedridden^UMLS:C0741453_bedridden\n",
+      "facial paresis\n",
+      "abdominal tenderness\n",
+      "unsteady gait\n",
+      "hallucinations auditory\n",
+      "hyperkalemia\n",
+      "urgency of micturition\n",
+      "ascites\n",
+      "hypotension\n",
+      "breath sounds decreased\n",
+      "enuresis\n",
+      "speech slurred\n",
+      "asterixis\n",
+      "muscle twitch\n",
+      "sleepy\n",
+      "headache\n",
+      "lightheadedness\n",
+      "foodintolerance\n",
+      "numbnessof hand\n",
+      "generaldiscomfort\n",
+      "drowsiness\n",
+      "stiffness\n",
+      "unsteadygait\n",
+      "prostatism\n",
+      "drowsiness^UMLS:C0234450_sleepy\n",
+      "weight gain\n",
+      "fatigue^UMLS:C0557875_tired\n",
+      "motor retardation\n",
+      "mass of body structure\n",
+      "feeling suicidal\n",
+      "feeling hopeless\n",
+      "irritable mood\n",
+      "has religious belief\n",
+      "nervousness\n",
+      "hallucinations visual\n",
+      "formication\n",
+      "mood depressed\n",
+      "hot flush\n",
+      "lesion\n",
+      "cushingoid facies^UMLS:C0878661_cushingoid habitus\n",
+      "emphysematous change\n",
+      "decreased body weight\n",
+      "hoarseness\n",
+      "thicken\n",
+      "night sweat\n",
+      "spontaneous rupture of membranes\n",
+      "\n",
+      "pleuritic pain\n",
+      "productive cough\n",
+      "muscle hypotonia^UMLS:C0241938_hypotonic\n",
+      "redness\n",
+      "hypesthesia\n",
+      "hyperacusis\n",
+      "scratch marks\n",
+      "sore to touch\n",
+      "burning sensation\n",
+      "satiety early\n",
+      "throbbing sensation quality\n",
+      "sensory discomfort\n",
+      "general discomfort\n",
+      "constipation\n",
+      "pain abdominal\n",
+      "heartburn\n",
+      "breech presentation\n",
+      "cyanosis\n",
+      "pain in lower limb\n",
+      "cardiomegaly\n",
+      "clonus\n",
+      "non-productive cough\n",
+      "unwell\n",
+      "anorexia\n",
+      "syncope^UMLS:C0312422_blackout^UMLS:C0424533_historyof - blackout\n",
+      "anosmia\n",
+      "metastatic lesion\n",
+      "food intolerance\n",
+      "hemianopsia homonymous\n",
+      "hematocrit decreased\n",
+      "neck stiffness\n",
+      "yellow sputum\n",
+      "cicatrisation\n",
+      "hypometabolism\n",
+      "aura\n",
+      "myoclonus\n",
+      "gurgle\n",
+      "wheelchair bound\n",
+      "jugular venous distention\n",
+      "dyspnea on exertion\n",
+      "left atrial hypertrophy\n",
+      "oliguria\n",
+      "catatonia\n",
+      "unhappy\n",
+      "paresthesia\n",
+      "gravida 0\n",
+      "lung nodule\n",
+      "distended abdomen\n",
+      "ache\n",
+      "macerated skin\n",
+      "heavy feeling\n",
+      "rest pain\n",
+      "sinus rhythm\n",
+      "verbal auditory hallucinations\n",
+      "withdraw\n",
+      "energy increased\n",
+      "behavior hyperactive\n",
+      "terrify\n",
+      "photopsia\n",
+      "giddy mood\n",
+      "disturbed family\n",
+      "hypersomnia\n",
+      "hyperhidrosis disorder\n",
+      "mydriasis\n",
+      "extrapyramidal sign\n",
+      "loose associations\n",
+      "exhaustion\n",
+      "snore\n",
+      "r wave feature\n",
+      "overweight\n",
+      "systolic murmur\n",
+      "asymptomatic\n",
+      "splenomegaly\n",
+      "bleeding of vagina\n",
+      "macule\n",
+      "photophobia\n",
+      "painful swallowing\n",
+      "cachexia\n",
+      "hypocalcemia result\n",
+      "hypothermia\n",
+      "atypia\n",
+      "general unsteadiness\n",
+      "throat sore\n",
+      "snuffle\n",
+      "hacking cough\n",
+      "stridor\n",
+      "paresis\n",
+      "aphagia\n",
+      "focal seizures\n",
+      "abnormal sensation\n",
+      "stupor\n",
+      "fremitus\n",
+      "Stahli's line\n",
+      "stinging sensation\n",
+      "paralyse\n",
+      "hirsutism\n",
+      "sniffle\n",
+      "distendedabdomen\n",
+      "bradykinesia\n",
+      "outof breath\n",
+      "urgeincontinence\n",
+      "vision blurred\n",
+      "room spinning\n",
+      "rambling speech\n",
+      "clumsiness\n",
+      "decreased stool caliber\n",
+      "hematochezia\n",
+      "egophony\n",
+      "cicatrisation^UMLS:C0241158_scar tissue\n",
+      "neologism\n",
+      "decompensation\n",
+      "stool color yellow\n",
+      "rigor - temperature-associated observation\n",
+      "paraparesis\n",
+      "urge incontinence\n",
+      "moody\n",
+      "fear of falling\n",
+      "spasm\n",
+      "hyperventilation\n",
+      "excruciating pain\n",
+      "gag\n",
+      "posturing\n",
+      "pulse absent\n",
+      "dysesthesia\n",
+      "polymyalgia\n",
+      "passed stones\n",
+      "qt interval prolonged\n",
+      "ataxia\n",
+      "Heberden's node\n",
+      "hepatomegaly\n",
+      "sciatica\n",
+      "frothy sputum\n",
+      "mass in breast\n",
+      "retropulsion\n",
+      "estrogen use\n",
+      "hypersomnolence\n",
+      "underweight^UMLS:C1319518_underweight\n",
+      "dullness\n",
+      "red blotches\n",
+      "colic abdominal\n",
+      "hypokalemia\n",
+      "out of breath\n",
+      "hunger\n",
+      "prostate tender\n",
+      "pain foot\n",
+      "urinary hesitation\n",
+      "disequilibrium\n",
+      "flushing\n",
+      "indifferent mood\n",
+      "urinoma\n",
+      "hypoalbuminemia\n",
+      "pustule\n",
+      "slowing of urinary stream\n",
+      "extreme exhaustion\n",
+      "no status change\n",
+      "breakthrough pain\n",
+      "green sputum\n",
+      "pansystolic murmur\n",
+      "systolic ejection murmur\n",
+      "stuffy nose\n",
+      "barking cough\n",
+      "rapid shallow breathing\n",
+      "noisy respiration\n",
+      "nasal discharge present\n",
+      "frail\n",
+      "cystic lesion\n",
+      "symptom aggravating factors\n",
+      "projectile vomiting\n",
+      "heavy legs\n",
+      "titubation\n",
+      "dysdiadochokinesia\n",
+      "achalasia\n",
+      "side pain\n",
+      "monocytosis\n",
+      "posterior rhinorrhea\n",
+      "incoherent\n",
+      "lameness^UMLS:C1456822_claudication\n",
+      "clammy skin\n",
+      "mediastinal shift\n",
+      "nausea and vomiting\n",
+      "awakening early\n",
+      "tenesmus\n",
+      "fecaluria\n",
+      "pneumatouria\n",
+      "unable to concentrate\n",
+      "todd paralysis\n",
+      "alcoholic withdrawal symptoms\n",
+      "myalgia\n",
+      "dyspareunia\n",
+      "poor dentition\n",
+      "floppy\n",
+      "inappropriate affect\n",
+      "poor feeding\n",
+      "moan\n",
+      "welt\n",
+      "tinnitus\n",
+      "hydropneumothorax\n",
+      "superimposition\n",
+      "feeling strange\n",
+      "uncoordination\n",
+      "absences finding\n",
+      "tonic seizures\n",
+      "debilitation\n",
+      "impaired cognition\n",
+      "drool\n",
+      "pin-point pupils\n",
+      "tremor resting\n",
+      "groggy\n",
+      "adverse reaction^UMLS:C0879626_adverse effect\n",
+      "abdominal bloating\n",
+      "fatigability\n",
+      "para 2\n",
+      "abortion\n",
+      "intermenstrual heavy bleeding\n",
+      "previous pregnancies 2\n",
+      "primigravida\n",
+      "abnormallyhard consistency\n",
+      "proteinemia\n",
+      "unconsciousstate\n",
+      "burningsensation\n",
+      "pain neck\n",
+      "dizzy spells\n",
+      "shooting pain\n",
+      "hyperemesis\n",
+      "milky\n",
+      "regurgitates after swallowing\n",
+      "lip smacking\n",
+      "phonophobia\n",
+      "rolling of eyes\n",
+      "ambidexterity\n",
+      "pulsus paradoxus\n",
+      "gravida 10\n",
+      "bruit\n",
+      "breath-holding spell\n",
+      "scleral icterus\n",
+      "retch\n",
+      "blanch\n",
+      "elation\n",
+      "verbally abusive behavior\n",
+      "transsexual\n",
+      "behavior showing increased motor activity\n",
+      "scar tissue\n",
+      "coordination abnormal\n",
+      "choke\n",
+      "bowel sounds decreased\n",
+      "numbness of hand\n",
+      "no known drug allergies\n",
+      "low back pain\n",
+      "charleyhorse\n",
+      "sedentary\n",
+      "feels hot/feverish\n",
+      "flare\n",
+      "None\n",
+      "pericardial friction rub\n",
+      "hoard\n",
+      "panic\n",
+      "cardiovascularfinding^UMLS:C1320716_cardiovascular event\n",
+      "soft tissue swelling\n",
+      "rhd positive\n",
+      "para 1\n",
+      "nasal flaring\n",
+      "sneeze\n",
+      "hypertonicity\n",
+      "Murphy's sign\n",
+      "flatulence\n",
+      "gasping for breath\n",
+      "feces in rectum\n",
+      "abnormally hard consistency\n",
+      "prodrome\n",
+      "hypoproteinemia\n",
+      "alcohol binge episode\n",
+      "abdomen acute\n",
+      "air fluid level\n",
+      "catching breath\n",
+      "large-for-dates fetus\n",
+      "immobile\n",
+      "homicidal thoughts\n"
+     ]
+    }
+   ],
+   "source": [
+    "cck = unique(','.join(ccc).split(','))\n",
+    "firc = open('symptoms.txt','w')\n",
+    "for l in cck:\n",
+    "    print(l)\n",
+    "    firc.writelines(l+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f68f42b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cd96e95",
    "metadata": {},
    "outputs": [],
    "source": []
