--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2889e138",
+   "id": "be6c904e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c52e4c",
+   "id": "efc10f29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3b6a35b8",
+   "id": "42b40bbe",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c0d344f8",
+   "id": "39b7d899",
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "9ba662bc",
+   "execution_count": 52,
+   "id": "8b89d6f1",
    "metadata": {},
    "outputs": [
     {
@@ -110,25 +110,14 @@
      "output_type": "stream",
      "text": [
       "The first 10 words in our dictionary are: \n",
-      "['2', '1080', 'c', '10', 'point', '10th', '11', 'point', '12', 'point']\n",
-      "The dictionary has 418992 words \n",
-      "The dictionary has  418992 key values pairs\n",
-      "Enter any word:helc\n",
-      "word 0: hell, probability 0.000062\n",
-      "word 1: hlc, probability 0.000002\n",
-      "word 2: hele, probability 0.000002\n",
-      "word 3: heli, probability 0.000004\n",
-      "word 4: helco, probability 0.000002\n",
-      "word 5: hel, probability 0.000002\n",
-      "word 6: hela, probability 0.000002\n",
-      "word 7: held, probability 0.000006\n",
-      "word 8: helic, probability 0.000002\n",
-      "word 9: helm, probability 0.000004\n",
-      "word 10: elc, probability 0.000002\n",
-      "word 11: help, probability 0.000008\n",
-      "word 12: holc, probability 0.000002\n",
-      "word 13: hdlc, probability 0.000002\n",
-      "word 14: herc, probability 0.000002\n"
+      "['painchest', 'shortnessof', 'breath', 'dizziness', 'asthenia', 'fall', 'syncope', 'vertigo', 'sweat', 'umls']\n",
+      "The dictionary has 419070 words \n",
+      "The dictionary has  419070 key values pairs\n",
+      "Enter any word:help\n",
+      "word 0: p, probability 0.000134\n",
+      "word 1: l, probability 0.000118\n",
+      "word 2: e, probability 0.000085\n",
+      "word 3: h, probability 0.000085\n"
      ]
     }
    ],
@@ -286,21 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "089a2063",
+   "execution_count": 51,
+   "id": "bc0201e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'6.206289298417784e-05': 'hell',\n",
-       " '1.9394654057555576e-06': 'herc',\n",
-       " '3.878930811511115e-06': 'helm',\n",
-       " '5.8183962172666724e-06': 'held',\n",
-       " '7.75786162302223e-06': 'help'}"
+       "{'6.197154731333976e-05': 'hell',\n",
+       " '5.809832560625603e-06': 'elk',\n",
+       " '1.9366108535418674e-06': 'welk',\n",
+       " '3.873221707083735e-06': 'hulk',\n",
+       " '7.74644341416747e-06': 'help'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +301,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49083c9b",
+   "id": "ebe5ee84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d45ff99a",
    "metadata": {},
    "outputs": [],
    "source": []
