--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be6c904e",
+   "id": "5f0fd160",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efc10f29",
+   "id": "46db1663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "42b40bbe",
+   "id": "7256f07f",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "39b7d899",
+   "id": "da6eac54",
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "8b89d6f1",
+   "execution_count": 63,
+   "id": "0e1c284f",
    "metadata": {},
    "outputs": [
     {
@@ -113,11 +113,17 @@
       "['painchest', 'shortnessof', 'breath', 'dizziness', 'asthenia', 'fall', 'syncope', 'vertigo', 'sweat', 'umls']\n",
       "The dictionary has 419070 words \n",
       "The dictionary has  419070 key values pairs\n",
-      "Enter any word:help\n",
-      "word 0: p, probability 0.000134\n",
-      "word 1: l, probability 0.000118\n",
-      "word 2: e, probability 0.000085\n",
-      "word 3: h, probability 0.000085\n"
+      "Enter any word:welc\n",
+      "word 0: weld, probability 0.000010\n",
+      "word 1: welt, probability 0.000004\n",
+      "word 2: welf, probability 0.000002\n",
+      "word 3: well, probability 0.002427\n",
+      "word 4: welch, probability 0.000002\n",
+      "word 5: welcy, probability 0.000002\n",
+      "word 6: wels, probability 0.000002\n",
+      "word 7: welk, probability 0.000002\n",
+      "word 8: elc, probability 0.000002\n",
+      "word 9: weli, probability 0.000002\n"
      ]
     }
    ],
@@ -252,8 +258,7 @@
     "    return edit_set2\n",
     "\n",
     "\n",
-    "\n",
-    "# get corrected word\n",
+    " \n",
     "def get_corrections(word, probs, vocab, n=2):\n",
     "    suggested_word = []\n",
     "    best_suggestion = []\n",
@@ -268,28 +273,31 @@
     "probs = get_probs(word_count)\n",
     "tmp_corrections = get_corrections(my_word, probs, v, 2)\n",
     "words_prob={}\n",
+    "box=[]\n",
+    "\n",
     "for i, word_prob in enumerate(tmp_corrections):\n",
     "    print(f\"word {i}: {word_prob[0]}, probability {word_prob[1]:.6f}\")\n",
-    "    words_prob[str(word_prob[1])]=word_prob[0]"
+    "    words_prob[str(word_prob[1])]=word_prob[0]\n",
+    "    box.append([str(word_prob[1]),word_prob[0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "bc0201e2",
+   "execution_count": 59,
+   "id": "8794fdfd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'6.197154731333976e-05': 'hell',\n",
-       " '5.809832560625603e-06': 'elk',\n",
-       " '1.9366108535418674e-06': 'welk',\n",
-       " '3.873221707083735e-06': 'hulk',\n",
+       " '1.9366108535418674e-06': 'herc',\n",
+       " '3.873221707083735e-06': 'helm',\n",
+       " '5.809832560625603e-06': 'held',\n",
        " '7.74644341416747e-06': 'help'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,16 +308,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ebe5ee84",
+   "execution_count": 64,
+   "id": "e3d0e155",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['9.683054267709338e-06', 'weld'],\n",
+       " ['3.873221707083735e-06', 'welt'],\n",
+       " ['1.9366108535418674e-06', 'welf'],\n",
+       " ['0.00242657339948796', 'well'],\n",
+       " ['1.9366108535418674e-06', 'welch'],\n",
+       " ['1.9366108535418674e-06', 'welcy'],\n",
+       " ['1.9366108535418674e-06', 'wels'],\n",
+       " ['1.9366108535418674e-06', 'welk'],\n",
+       " ['1.9366108535418674e-06', 'elc'],\n",
+       " ['1.9366108535418674e-06', 'weli']]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "108e30c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "box.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "4e362680",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['0.00242657339948796', 'well'],\n",
+       " ['1.9366108535418674e-06', 'elc'],\n",
+       " ['1.9366108535418674e-06', 'welch'],\n",
+       " ['1.9366108535418674e-06', 'welcy'],\n",
+       " ['1.9366108535418674e-06', 'welf'],\n",
+       " ['1.9366108535418674e-06', 'weli'],\n",
+       " ['1.9366108535418674e-06', 'welk'],\n",
+       " ['1.9366108535418674e-06', 'wels'],\n",
+       " ['3.873221707083735e-06', 'welt'],\n",
+       " ['9.683054267709338e-06', 'weld']]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45ff99a",
+   "id": "a1ff5681",
    "metadata": {},
    "outputs": [],
    "source": []
